--- a/app/views/stamps/show.html.haml
+++ b/app/views/stamps/show.html.haml
@@ -1,60 +1,78 @@
-%span#stamps
-  .row
-    = render partial: 'partials/window', locals: { header: true, footer: true }
-    .col-9.col-md-5.col-lg-6
-      .row
-        .col-12.text-center
-          %button.btn.btn-info{type: 'button'}
-            = @stamp.state.titleize
-    .col-12.col-md-3.col-lg-2
-      .row
-        %h5
-          Created by
-      .row
-        .col-3.pl-0.d-flex.justify-content-center.align-items-center
-          = link_to user_path(@stamp.creator), class: 'default-color' do
-            = fa_icon 'user', style: 'font-size: 2.4em;'
-        .col-9.pr-0.border-left
-          .row.p-0
-            .col-12
-              = link_to user_path(@stamp.creator) do
-                = @stamp.creator.username
-          .row.p-0
-            .col-12
-              = @stamp.creator.reputation
-              %span.small.text-muted REP
-  .row
-    .col-6{data: {controller: 'collapsible'}}
-      .row.collapsible{data: {action: 'click->collapsible#toggle'}}
-        .col-1
-          = fa_icon('angle-down', data: {target: 'collapsible.angle'})
-        .col-1
-          = render partial: 'votes/partials/upvote', locals: { power: @stamp.upvote_power }
-        .col-10
-          %h5
-            Upvotes
-      %span.hidden{data: {target: 'collapsible.details'}}
-        .row
-          - @stamp.upvotes.ordered.each do |upvote|
-            .col-1.pt-2
-              = render partial: 'votes/partials/upvote', locals: { power: upvote.power }
-            .col-11.pt-2.align-self-center
-              = link_to user_path(upvote.user), class: 'default-color' do
-                = upvote.user.username
-    .col-6{data: {controller: 'collapsible'}}
-      .row.collapsible{data: {action: 'click->collapsible#toggle'}}
-        .col-1
-          = fa_icon('angle-down', data: {target: 'collapsible.angle'})
-        .col-1
-          = render partial: 'votes/partials/downvote', locals: { power: @stamp.downvote_power }
-        .col-10
-          %h5
-            Downvotes
-      %span.hidden{data: {target: 'collapsible.details'}}
-        .row
-          - @stamp.downvotes.ordered.each do |downvote|
-            .col-1.pt-2
-              = render partial: 'votes/partials/downvote', locals: { power: downvote.power }
-            .col-11.pt-2.align-self-center
-              = link_to user_path(downvote.user), class: 'default-color' do
-                = downvote.user.username
+%div.ui.two.column.grid.container
+  %div.sixteen.wide.column
+    %h1.header
+      Stamp for trello.com
+      %a
+        %i.external.icon
+    %div.ui.clearing.divider
+  %div.ten.wide.column
+    %div.ui.grid
+      %div.sixteen.wide.column
+        %h3
+          Business
+      %div.twelve.wide.column
+        %div.ui.big.progress
+          50%
+      %div.four.wide.column
+        %a
+          %i.hand.caret.up.big.icon
+        %a
+          %i.hand.caret.down.big.icon
+    %h3
+      Comment
+    %div.ui.clearing.divider
+      %p
+        Welcome to my lala land Welcome to my lala land Welcome to my lala land
+        Welcome to my lala land Welcome to my lala land Welcome to my lala land
+        Welcome to my lala land Welcome to my lala land Welcome to my lala land
+        Welcome to my lala land Welcome to my lala land Welcome to my lala land
+  %div.six.wide.column
+    %h3
+      Other Stamps of this domain
+    %nbsp
+      %div.ui.grid
+        %div.five.wide.column
+          %h4.ui.middle.aligned.header
+            Management
+        %div.eleven.wide.column
+          %div.bar.float.right
+            %div.ui.standard.top.progress
+              39%
+              %div.ui.tiny.buttom.orange.progress
+                49%
+        %div.five.wide.column
+          %h4.ui.middle.aligned.header
+            Business
+        %div.eleven.wide.column
+          %div.bar.float.right
+            %div.ui.standard.top.progress
+              39%
+              %div.ui.tiny.buttom.orange.progress
+                49%
+        %div.five.wide.column
+          %h4.ui.middle.aligned.header
+            ADS
+        %div.eleven.wide.column
+          %div.bar.float.right
+            %div.ui.big.progress
+              40%
+      %h3
+        Suggested
+        %button.ui.button
+          Add Stamp
+      %div.ui.clearing.divider
+      %div.ui.grid
+        %div.five.wide.column
+          %h4.ui.middle.aligned.header
+            Sport
+        %div.eleven.wide.column
+          %div.bar.float.right
+            %div.ui.big.progress
+              40%
+        %div.five.wide.column
+          %h4.ui.middle.aligned.header
+            Animals
+        %div.eleven.wide.column
+          %div.bar.float.right
+            %div.ui.big.progress
+              40%
