Remove superfluous classes

--- a/app/views/domains/show.html.haml
+++ b/app/views/domains/show.html.haml
@@ -3,7 +3,7 @@
     %h2.header
       safing.io
       %i.external.alternate.icon
-    %div.ui.clearing.divider
+    %div.ui.divider
   %div.eleven.wide.column
 
     %div.ui.grid
@@ -36,7 +36,7 @@
       Suggested
       %button.ui.button
         Add Stamp
-    %div.ui.clearing.divider
+    %div.ui.divider
     %div.ui.grid
       %div.three.wide.column
         %h4.ui.middle.aligned.header
@@ -67,7 +67,7 @@
         %i.history.icon
         %div.content
           1 months ago
-      %div.ui.clearing.divider
+      %div.ui.divider
     %div.ui.relaxed.list
       %h3.ui.header
         Subdomains
