--- a/app/views/stamps/show.html.haml
+++ b/app/views/stamps/show.html.haml
@@ -1,10 +1,10 @@
-%div.ui.two.column.grid.container
+%div.ui.grid.container
   %div.sixteen.wide.column
     %h1.header
       Stamp for trello.com
       %a
         %i.external.icon
-    %div.ui.clearing.divider
+    %div.ui.divider
   %div.ten.wide.column
     %div.ui.grid
       %div.sixteen.wide.column
@@ -20,7 +20,7 @@
           %i.hand.caret.down.big.icon
     %h3
       Comment
-    %div.ui.clearing.divider
+    %div.ui.divider
       %p
         Welcome to my lala land Welcome to my lala land Welcome to my lala land
         Welcome to my lala land Welcome to my lala land Welcome to my lala land
@@ -60,7 +60,7 @@
         Suggested
         %button.ui.button
           Add Stamp
-      %div.ui.clearing.divider
+      %div.ui.divider
       %div.ui.grid
         %div.five.wide.column
           %h4.ui.middle.aligned.header
