--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -25,7 +25,7 @@
       %div.eight.wide.column
         %h1.ui.header
           Karl Marx
-        %div.ui.clearing.divider
+        %div.ui.divider
         %p
           My Stamp StoryMy Stamp StoryMy Stamp StoryMy Stamp StoryMy Stamp StoryMy Stamp Story
           My Stamp StoryMy Stamp StoryMy Stamp StoryMy Stamp StoryMy Stamp StoryMy Stamp Story
@@ -59,7 +59,7 @@
               6
             %div.label
               domains
-        %div.ui.clearing.divider
+        %div.ui.divider
         %div.ui.list
           %h2.ui.header
             = fa_icon 'user'
