Design new stamp show skeleton

--- a/app/views/stamps/new.html.haml
+++ b/app/views/stamps/new.html.haml
@@ -1,1 +1,86 @@
-AAAAAH, DER GROSSE BÖSE ASTRALOF!!!! LAUFT LAUFT LAUFT
+%div.ui.grid.container
+  %div.sixteen.wide.column
+    %h1.header
+      New Stamp for trello.com
+      %a
+        %i.external.icon
+    %div.ui.divider
+  %div.ten.wide.column
+    %div.ui.grid
+      %div.sixteen.wide.column
+        %h3
+          Label
+          %div.ui.compact.selection.dropdown
+            %i.dropdown.icon
+            %div.text
+              Compact
+            %div.menu
+              %div.item
+                A
+              %div.item
+                b
+      %div.twelve.wide.column
+        %div.ui.big.progress
+          50%
+      %div.four.wide.column
+        %a
+          %i.hand.caret.up.big.icon
+        %a
+          %i.hand.caret.down.big.icon
+    %h3
+      Comment
+    %div.ui.divider
+      %p
+        Welcome to my lala land Welcome to my lala land Welcome to my lala land
+        Welcome to my lala land Welcome to my lala land Welcome to my lala land
+        Welcome to my lala land Welcome to my lala land Welcome to my lala land
+        Welcome to my lala land Welcome to my lala land Welcome to my lala land
+  %div.six.wide.column
+    %h3
+      Other Stamps of this domain
+    %div.ui.grid
+      %div.five.wide.column
+        %h4.ui.middle.aligned.header
+          Management
+      %div.eleven.wide.column
+        %div.bar.float.right
+          %div.ui.standard.top.progress
+            39%
+            %div.ui.tiny.buttom.orange.progress
+              49%
+      %div.five.wide.column
+        %h4.ui.middle.aligned.header
+          Business
+      %div.eleven.wide.column
+        %div.bar.float.right
+          %div.ui.standard.top.progress
+            39%
+            %div.ui.tiny.buttom.orange.progress
+              49%
+      %div.five.wide.column
+        %h4.ui.middle.aligned.header
+          ADS
+      %div.eleven.wide.column
+        %div.bar.float.right
+          %div.ui.big.progress
+            40%
+    %h3
+      Suggested
+      %button.ui.button
+        Add Stamp
+    %div.ui.divider
+    %div.ui.grid
+      %div.five.wide.column
+        %h4.ui.middle.aligned.header
+          Sport
+      %div.eleven.wide.column
+        %div.bar.float.right
+          %div.ui.big.progress
+            40%
+      %div.five.wide.column
+        %h4.ui.middle.aligned.header
+          Animals
+      %div.eleven.wide.column
+        %div.bar.float.right
+          %div.ui.big.progress
+            40%
