--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,24 +1,44 @@
-%h2 Sign up
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = devise_error_messages!
-  .form-group
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true, class: 'form-control'
-  .form-group
-    = f.label :username
-    %br/
-    = f.text_field :username, autofocus: true, class: 'form-control'
-  .form-group
-    = f.label :password
-    - if @minimum_password_length
-      %em
-        (#{@minimum_password_length} characters minimum)
-    %br/
-    = f.password_field :password, autocomplete: 'off', class: 'form-control'
-  .form-group
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control'
-  = f.submit 'Sign up', class: 'btn btn-primary'
-= render 'devise/shared/links'
+%div.ui.grid.container
+  %div.six.wide.column
+  %div.four.wide.column.some{ style: 'box-shadow: 0 20px 20px -20px #333' }
+    %div.ui.form.header
+      %h1
+        Sign up
+      %div.field
+        %label
+          Email
+        %div.ui.left.icon.input
+          %input.placeholder.text
+          %i.mail.icon
+      %div.field
+        %label
+          Username
+        %div.ui.left.icon.input
+          %input.placeholder.text
+          %i.user.icon
+      %div.field
+        %label
+          Password (1 characters minimum)
+        %div.ui.left.icon.input
+          %input.placeholder.text
+          %i.unlock.alternate.icon
+      %div.field
+        %label
+          Password confirmation
+        %div.ui.left.icon.input
+          %input.placeholder.text
+          %i.unlock.alternate.icon
+      %div.ui.checkbox
+        %label
+          Remember Me
+    %div.ui.purple.submit.button
+      Login
+    %div.ui.divider
+    %div.ui.list
+      %div.item
+        %a
+          Log in
+      %div.item
+        %a
+          Didn't receive confirmation instructions?
+  %div.six.wide.column
