Design stamp index show skeleton

--- a/app/views/stamps/index.html.haml
+++ b/app/views/stamps/index.html.haml
@@ -1,5 +1,105 @@
-mkaaay.
+%div.ui.container
+  %h1.header
+    Most Activity
+  %div.ui.divider
+%div.ui.internally.celled.grid.container
+  %div.eight.wide.column
+    %div.sixteen.wide.column
+      %h2.header
+        safing.io
+        %i.external.alternate.icon
+      %div.ui.divider
+    %div.eleven.wide.column
 
-mkaaay.
+      %div.ui.grid
+        %div.three.wide.column
+          %h4.ui.middle.aligned.header
+            Management
+        %div.thirteen.wide.column
+          %div.bar.float.right
+            %div.ui.standard.top.progress
+              39%
+              %div.ui.tiny.buttom.orange.progress
+                49%
+        %div.three.wide.column
+          %h4.ui.middle.aligned.header
+            Business
+        %div.thirteen.wide.column
+          %div.bar.float.right
+            %div.ui.standard.top.progress
+              39%
+              %div.ui.tiny.buttom.orange.progress
+                49%
+        %div.three.wide.column
+          %h4.ui.middle.aligned.header
+            ADS
+        %div.thirteen.wide.column
+          %div.bar.float.right
+            %div.ui.big.progress
+              40%
+  %div.eight.wide.column
+    %div.sixteen.wide.column
+      %h2.header
+        trello.com
+        %i.external.alternate.icon
+      %div.ui.divider
+    %div.eleven.wide.column
 
-Woop woop
+      %div.ui.grid
+        %div.three.wide.column
+          %h4.ui.middle.aligned.header
+            Management
+        %div.thirteen.wide.column
+          %div.bar.float.right
+            %div.ui.standard.top.progress
+              39%
+              %div.ui.tiny.buttom.orange.progress
+                49%
+        %div.three.wide.column
+          %h4.ui.middle.aligned.header
+            Business
+        %div.thirteen.wide.column
+          %div.bar.float.right
+            %div.ui.standard.top.progress
+              39%
+              %div.ui.tiny.buttom.orange.progress
+                49%
+%div.ui.container
+  %h1.header
+    Labels
+  %div.ui.divider
+%div.ui.internally.celled.three.column.grid.container
+  %div.row
+    %div.column
+      %h3.header
+        Securit
+      %div.ui.grid
+        %div.six.wide.column
+          %div.ui.violet.submit.tiny.button
+            gg.at
+        %div.ten.wide.column
+          %div.bar.float.right
+            %div.ui.big.top.progress
+              39%
+      %div.ui.grid
+        %div.six.wide.column
+          %div.ui.violet.submit.tiny.button
+            trello.com
+        %div.ten.wide.column
+          %div.bar.float.right
+            %div.ui.big.top.progress
+              39%
+    %div.column
+      %h3.header
+        Privacy invasive
+      %div.ui.grid
+        %div.six.wide.column
+          %div.ui.violet.submit.tiny.button
+            lalandamast.dream
+        %div.ten.wide.column
+          %div.bar.float.right
+            %div.ui.big.top.progress
+              39%
+    %div.column
+      %h3.header
+        Spam
