--- a/app/views/domains/new.html.haml
+++ b/app/views/domains/new.html.haml
@@ -1,13 +1,14 @@
-%div.ui.centered.grid.container
-  %div.six.wide.middle.aligned.column.some{ style: 'box-shadow: 0 20px 20px -20px #333'}
-    %img.ui.centered.small.image{src: '/assets/basic_logo.png'}
-    %div.ui.form.header
-      %h1.ui.icon.header
-        New Domain
-      %div.ui.search
-        %div.ui.icon.input
-          %input.prompt{placeholder: "https://", type: "text"}
-            %i.search.icon
-        %div.ui.purple.submit.button
-          Creat
-        %div.results
+%div.ui.middle.aligned.centered.grid.container{style: 'height: 70%;'}
+  %div.row
+    %div.six.wide.column{ style: 'box-shadow: 0 20px 20px -20px #333; padding-bottom: 20px'}
+      %img.ui.centered.small.image{src: '/assets/basic_logo.png'}
+      %div.ui.centered.form.header
+        %h1.ui.icon.header
+          New Domain
+        %div.ui.search
+          %div.ui.icon.input
+            %input.prompt{placeholder: "https://", type: "text"}
+              %i.search.icon
+          %div.ui.purple.submit.button
+            Creat
+          %div.results
