Change button for add comment to inset

--- a/app/views/stamps/new.html.haml
+++ b/app/views/stamps/new.html.haml
@@ -53,7 +53,7 @@
         %form.ui.form
           %div.field
             %textarea
-          %div.ui.submit.labeled.icon.purple.button
+          %button.ui.purple.basic.big.button{style: "margin-bottom: 1rem; padding: 6px; box-shadow: 0px 0px 2px 2px #A333C8 inset !important; "}
             %i.plus.icon
             Add Comment
   %div.six.wide.right.floated.column
