--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,7 +1,8 @@
-%div.ui.vertical.stripe.segment
-  %div.ui.middle.aligned.stackable.grid.container
-    %div.row
-      %div.four.wide.column
+
+%div.ui.middle.aligned.centered.grid.container{style: 'height: 70%;'}
+  %div.row
+    %div.four.wide.column
+      %div.ui.segment{ style: 'box-shadow: 5px 5px 10px -6px #A333C8 ; padding: 0px'}
         %div.ui.fluid.card
           %div.image
             %img{src: '/assets/basic_logo.png'}
@@ -22,59 +23,91 @@
                       2543
                     %div.label
                       rep
-      %div.eight.wide.column
-        %h1.ui.header
-          Karl Marx
-        %div.ui.divider
-        %p
-          My Stamp StoryMy Stamp StoryMy Stamp StoryMy Stamp StoryMy Stamp StoryMy Stamp Story
-          My Stamp StoryMy Stamp StoryMy Stamp StoryMy Stamp StoryMy Stamp StoryMy Stamp Story
-          My Stamp StoryMy Stamp StoryMy Stamp Story
+    %div.eight.wide.column
+      %h1.ui.header
+        Karl Marx
+      %div.ui.divider
+      %p
+        My Stamp StoryMy Stamp StoryMy Stamp StoryMy Stamp StoryMy Stamp StoryMy Stamp Story
+        My Stamp StoryMy Stamp StoryMy Stamp StoryMy Stamp StoryMy Stamp StoryMy Stamp Story
+        My Stamp StoryMy Stamp StoryMy Stamp Story
 
-          My Stamp StoryMy Stamp StoryMy Stamp StoryMy Stamp Story
-          My Stamp StoryMy Stamp StoryMy Stamp Storyv
-      %div.four.wide.column
-        %div.ui.list
-          %h2.ui.header
-            = fa_icon 'chart-bar'
+        My Stamp StoryMy Stamp StoryMy Stamp StoryMy Stamp Story
+        My Stamp StoryMy Stamp StoryMy Stamp Storyv
+    %div.three.wide.right.floated.column
+      %div.ui.basic.segment
+        %div.ui.relaxed.list
+          %h4.ui.header
+            %i.chart.bar.icon
             Stats
-        %div.item
-          %img{src: '/assets/stamp_j3rik0_no_text_icon.png', height: '16px'}
-          %div.ui.mini.horizontal.statistic
-            %div.value
-              4
-            %div.label
-              stamps
-        %div.item
-          = fa_icon 'sort', size: '2x'
-          %div.ui.mini.horizontal.statistic
-            %div.value
-              3
-            %div.label
-              cast votes
-        %div.item
-          = fa_icon 'link', size: '1x'
-          %div.ui.mini.horizontal.statistic
-            %div.value
-              6
-            %div.label
-              domains
-        %div.ui.divider
-        %div.ui.list
-          %h2.ui.header
-            = fa_icon 'user'
+          %div.item
+            %img{src: '/assets/stamp_j3rik0_no_text_icon.png', height: '15px'}
+              4 stamps
+          %div.item
+            %i.sort.icon{style: "font-size: 21px;"}
+            %div.content{style: "padding-left: 0;"}
+              3 cast votes
+          %div.item
+            %i.linkify.icon
+            %div.content
+              1 domains
+          %div.ui.divider{style: "margin-bottom: -23px;"}
+      %div.ui.basic.segment
+        %div.ui.relaxed.list
+          %h4.ui.header
+            %i.user.circle.outline.icon
             User
-        %div.item
-          = fa_icon 'calendar', size: '1x'
-          %div.ui.mini.horizontal.statistic
-            %div.value
-              about 2 months
-            %div.label
-              ago
-        %div.item
-          = fa_icon 'chart-pie', size: '1x'
-          %div.ui.mini.horizontal.statistic
-            %div.value
-              67%
-            %div.label
-              success rate
+          %div.item
+            %i.calendar.alternate.outline.icon
+            %div.content
+              2 months ago
+          %div.item
+            %i.chart.pie.icon
+            %div.content
+              \67 %
+
+
+    -#  %div.ui.list
+        %h2.ui.header
+          = fa_icon 'chart-bar'
+          Stats
+      %div.item
+        %img{src: '/assets/stamp_j3rik0_no_text_icon.png', height: '16px'}
+        %div.ui.mini.horizontal.statistic
+          %div.value
+            4
+          %div.label
+            stamps
+      %div.item
+        = fa_icon 'sort', size: '2x'
+        %div.ui.mini.horizontal.statistic
+          %div.value
+            3
+          %div.label
+            cast votes
+      %div.item
+        = fa_icon 'link', size: '1x'
+        %div.ui.mini.horizontal.statistic
+          %div.value
+            6
+          %div.label
+            domains
+      %div.ui.divider
+      %div.ui.list
+        %h2.ui.header
+          = fa_icon 'user'
+          User
+      %div.item
+        = fa_icon 'calendar', size: '1x'
+        %div.ui.mini.horizontal.statistic
+          %div.value
+            about 2 months
+          %div.label
+            ago
+      %div.item
+        = fa_icon 'chart-pie', size: '1x'
+        %div.ui.mini.horizontal.statistic
+          %div.value
+            67%
+          %div.label
+            success rate
