Re design new stamp show

--- a/app/views/stamps/new.html.haml
+++ b/app/views/stamps/new.html.haml
@@ -9,25 +9,25 @@
     %div.ui.basic.segment
       %h3{style: "margin-bottom: 2rem;"}
         Label:
-        %button.ui.grey.basic.tiny.button{style: "margin-bottom: 1rem; padding: 6px; box-shadow: 0px 0px 2px 2px #838383 inset !important; "}
+        %button.ui.grey.basic.tiny.button{style: "margin-bottom: 1rem; padding: 6px; background-color: #E8E8E8 !important; "}
           Animals
-      %button.ui.purple.basic.button{style: "margin-bottom: 1rem; padding: 6px; box-shadow: 0px 0px 2px 2px #A333C8 inset !important; "}
+      %button.ui.purple.basic.button{style: "margin-bottom: 1rem; padding: 6px; background-color: #FFE3FF !important; "}
         Spam
-      %button.ui.grey.basic.button{style: "margin-bottom: 1rem; padding: 6px; box-shadow: 0px 0px 2px 2px #838383 inset !important; "}
+      %button.ui.grey.basic.button{style: "margin-bottom: 1rem; padding: 6px; background-color: #E8E8E8 !important; "}
         Management
-      %button.ui.grey.basic.button{style: "margin-bottom: 1rem; padding: 6px; box-shadow: 0px 0px 2px 2px #838383 inset !important; "}
+      %button.ui.grey.basic.button{style: "margin-bottom: 1rem; padding: 6px; background-color: #E8E8E8 !important; "}
         Business
-      %button.ui.teal.basic.button{style: "margin-bottom: 1rem; padding: 6px; box-shadow: 0px 0px 2px 2px #009c95 inset !important; "}
+      %button.ui.teal.basic.button{style: "margin-bottom: 1rem; padding: 6px; background-color: #c3ffff !important; "}
         ADS
-      %button.ui.grey.basic.button{style: "margin-bottom: 1rem; padding: 6px; box-shadow: 0px 0px 2px 2px #838383 inset !important; "}
+      %button.ui.grey.basic.button{style: "margin-bottom: 1rem; padding: 6px; background-color: #E8E8E8 !important; "}
         Animals
-      %button.ui.purple.basic.button{style: "margin-bottom: 1rem; padding: 6px; box-shadow: 0px 0px 2px 2px #A333C8 inset !important; "}
+      %button.ui.purple.basic.button{style: "margin-bottom: 1rem; padding: 6px; background-color: #FFE3FF !important; "}
         Anime
-      %button.ui.purple.basic.button{style: "margin-bottom: 1rem; padding: 6px; box-shadow: 0px 0px 2px 2px #A333C8 inset !important; "}
+      %button.ui.purple.basic.button{style: "margin-bottom: 1rem; padding: 6px; background-color: #FFE3FF !important; "}
         E-sport
-      %button.ui.purple.basic.button{style: "margin-bottom: 1rem; padding: 6px; box-shadow: 0px 0px 2px 2px #A333C8 inset !important; "}
+      %button.ui.purple.basic.button{style: "margin-bottom: 1rem; padding: 6px; background-color: #FFE3FF !important; "}
         News
-      %button.ui.purple.basic.button{style: "margin-bottom: 1rem; padding: 6px; box-shadow: 0px 0px 2px 2px #A333C8 inset !important; "}
+      %button.ui.purple.basic.button{style: "margin-bottom: 1rem; padding: 6px; background-color: #FFE3FF !important; "}
         lala
       %div.ui.right.aligned.basic.segment
         %div.ui.relaxed.horizontal.list{style: "border-top: 1px solid rgba(34, 36, 38, 0.15);"}
@@ -54,7 +54,6 @@
           %div.field
             %textarea
           %button.ui.purple.basic.big.button{style: "margin-bottom: 1rem; padding: 6px; box-shadow: 0px 0px 2px 2px #A333C8 inset !important; "}
-            %i.plus.icon
             Add Comment
   %div.six.wide.right.floated.column
     %div.ui.basic.segment
