--- a/app/views/stamps/show.html.haml
+++ b/app/views/stamps/show.html.haml
@@ -10,18 +10,18 @@
       %h3.ui.middle.aligned.header
         Business
       %div.ui.grid
-        %div.twelve.wide.column
+        %div.twelve.wide.column{style: "padding-top: 30px;"}
           %div.bar.float.right
-            %div.ui.purple.progress{style: "background: white;"}
+            %div.ui.purple.progress{style: "background: #FDDCFD;"}
               %div.bar{style: "width: 80%; z-index: 10; "}
                 %div.progress
                   80%
         %div.four.wide.column
-          %div.ui.icon.buttons{style: "inline_flex;"}
-            %div.ui.basic.purple.button.icon{style: "margin-bottom: 1rem; padding: 6px; box-shadow: 0px 0px 2px 2px #A333C8 inset !important;"}
-              %i.hand.caret.up.big.icon
-            %div.ui.basic.purple.button.icon{style: "margin-bottom: 1rem; padding: 6px; box-shadow: 0px 0px 2px 2px #A333C8 inset !important; "}
-              %i.hand.caret.down.big.icon
+          %div.ui.icon.vertical.buttons
+            %div.ui.button.icon{style: "margin-bottom: 0rem; padding: 2px; border: 0px !important; background-color: white;"}
+              %i.hand.caret.up.big.centered.icon{style: "color: purple"}
+            %div.ui.button.icon{style: "margin-bottom: 0rem; padding: 2px; border: 0px !important; background-color: white;"}
+              %i.vertically.flipped.hand.caret.up.big.icon{style: "color: purple"}
     %div.ui.basic.segment
       %h3
         Comment
@@ -30,7 +30,6 @@
           %div.field
             %textarea
           %button.ui.purple.basic.big.button{style: "margin-bottom: 1rem; padding: 6px; box-shadow: 0px 0px 2px 2px #A333C8 inset !important; "}
-            %i.plus.icon
             Add Comment
   %div.six.wide.column
     %div.ui.basic.segment{style: "margin-bottom: -22px;"}
@@ -73,8 +72,6 @@
     %div.ui.basic.segment
       %h3
         Suggested
-        %button.ui.purple.basic.big.button{style: "margin-bottom: 1rem; padding: 6px; box-shadow: 0px 0px 2px 2px #A333C8 inset !important; "}
-          Add Stamp
         %div.ui.divider{ style: "margin-top: 0px;"}
       %div.ui.grid
         %div.four.wide.column
@@ -96,3 +93,6 @@
               %div.bar{style: "width: 55%; z-index: 10; "}
                 %div.progress
                   55%
+      %div.ui.basic.segment{style: "padding: 0;"}
+        %button.ui.purple.basic.big.button{style: "margin-bottom: 1rem; padding: 6px; box-shadow: 0px 0px 2px 2px #A333C8 inset !important; "}
+          Add Stamp
