--- a/app/views/partials/_flash.html.haml
+++ b/app/views/partials/_flash.html.haml
@@ -1,4 +1,4 @@
-%div{:class => "alert #{bootstrap_class_for(type)} alert-dismissible fade show", :role => "alert"}
+%div{:class => "alert #{semantic_class_for(type)} alert-dismissible fade show", :role => "alert"}
   %button.close{"data-aria-label" => "Close", "data-dismiss" => "alert", :type => "button"}
     %span{"aria-hidden" => "true"} ×
   .text
