Dump most bootstrap code from project
some views still have bootstrap html, but will be refactored lateron anyway

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,8 +8,7 @@
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
     = csrf_meta_tags
   %body
-    = render partial: 'partials/header'
-    .container
-      - flash.each do |type, content|
-        = render 'partials/flash', type: type, content: content
-      = yield
+    = render partial: 'semantic/header'
+    - flash.each do |type, content|
+      = render 'partials/flash', type: type, content: content
+    = yield
