Re design domain show

--- a/app/views/domains/show.html.haml
+++ b/app/views/domains/show.html.haml
@@ -1,6 +1,5 @@
 %div.ui.two.column.grid.container
   %div.sixteen.wide.column
-
     %h1.header
       safing.io
       %a
@@ -44,8 +43,6 @@
     %div.ui.basic.segment
       %h3
         Suggested
-        %button.ui.purple.basic.big.button{style: "margin-bottom: 1rem; padding: 6px; box-shadow: 0px 0px 2px 2px #A333C8 inset !important; "}
-          Add Stamp
         %div.ui.divider{ style: "margin-top: 0px;"}
       %div.ui.grid
         %div.three.wide.column
@@ -67,6 +64,9 @@
               %div.bar{style: "width: 55%; z-index: 10; "}
                 %div.progress
                   55%
+      %div.ui.basic.segment{style: "padding: 0;"}
+        %button.ui.purple.basic.big.button{style: "margin-bottom: 1rem; padding: 6px; box-shadow: 0px 0px 2px 2px #A333C8 inset !important; "}
+          Add Stamp
   %div.five.wide.right.floated.column
     %div.ui.basic.segment
       %div.ui.relaxed.list
